added cart page

--- a/shopping.html
+++ b/shopping.html
@@ -3,12 +3,11 @@
 
 <head>
     <title>Shopping Page</title>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="script.js"></script>
+    <!-- <script type="text/javascript" src="script.js"></script> -->
 </head>
 
 <body>
@@ -25,15 +24,10 @@
                     <a class="navbar-brand" href="#">Geocery Cloud</a>
                 </div>
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="#">Cart
-                                <span>
-                                    <i class="fas fa-shopping-cart"></i>
-                                </span>
-                            </a>
-                        </li>
-                    </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                                <li><a href="#">Shop All</a></li>
+                                <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                            </ul>
                 </div>
             </nav>
 
@@ -112,7 +106,7 @@
                     </ul>
             </div>
             <div class="col-md-9">
-                    <div id="items">
+                    <div id="items" class="row">
 
                         </div>
             </div>
@@ -133,6 +127,9 @@
             </div>
         </footer>
     
-</body>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="script.js"></script>
+    </body>
 
 </html>
