--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Home Page</title>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
@@ -25,11 +25,10 @@
             <a class="navbar-brand" href="#">Geocery Cloud</a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="#">Cart<span><i class="fas fa-shopping-cart"></i></span></a>
-                </li>
-            </ul>
+                <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Shop All</a></li>
+                        <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                    </ul>
         </div>
     </nav>
 
@@ -37,7 +36,6 @@
         <div class="welcome">
             <h2>Welcome to Geocery Cloud</h2>
             <h4>The Best way to shop!.</h4>
-            <button class="btn btn-primary">SHOP ALL</button>
         </div>
         <div class="checkbox">
                 <input type="checkbox" id="checkbox">
@@ -50,8 +48,20 @@
                     <li class="circle" id="currentSlide3"></li>
                 </ol>
                 <div class="carousel-inner" id="slideshow">
-                        <ul id="image_slider">
-                            </ul>
+                        <!-- <ul id="image_slider">
+                            </ul> -->
+                    <div class="item">
+                            <img src="img/records.png" alt="Health Records">
+                        <figcaption class="carousel-caption">2017 Cars Promise to be More Fuel Efficient Than Ever</figcaption>
+                    </div>
+                    <!-- <div class="item">
+                        <img src="img/disaster.png" alt="Natural Disaster">
+                        <figcaption class="carousel-caption"> Hurricane Threatens to Touch Down on the East Coast This Weekend</figcaption>
+                    </div>
+                    <div class="item">
+                        <img src="img/records.png" alt="Health Records">
+                        <figcaption class="carousel-caption">Many Doctors are Moving to Digital Health Records This Year</figcaption>
+                    </div> -->
                 </div>
                 <a class="left carousel-control" href="#carousel" id="left"  data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left"></span>
@@ -83,6 +93,8 @@
             </ul>
         </div>
     </footer>
+    
+    
 </body>
 
 </html>
